# arkpz-pzpi-22-6-morhunov-ihor

./: LICENSE  README.md
Pract1/: arkpz-pzpi-22-6-morhunov-ihor  arkpz-pzpi-22-6-morhunov-ihor-pract1.txt  arkpz-pzpi-22-6-morhunov-ihor.txt
Pract1/arkpz-pzpi-22-6-morhunov-ihor-pract1/: code_example.txt
Pract2/: arkpz-pzpi-22-6-morhunov-ihor-pract2.txt
Pract2/arkpz-pzpi-22-6-morhunov-ihor-pract2/: code_example_pract2.txt
Task1/: arkpz-pzpi-22-6-Morhunov-Ihor-task1.txt
Task2/: arkpz-pzpi-22-6-morhunov-ihor-task2.txt
Task2/arkpz-pzpi-22-6-morhunov-ihor-task2/: pom.xml
Task2/arkpz-pzpi-22-6-morhunov-ihor-task2/src/main/resources/: application.properties
Task2/arkpz-pzpi-22-6-morhunov-ihor-task2/src/test/resources/: application-test.properties
Task2/atark-pzpi-22-6-morhunov-ihor-task2/: pom.xml
Task3/: arkpz-pzpi-22-6-morhunov-ihor-task3.txt
Task3/arkpz-pzpi-22-6-morhunov-ihor-task3/: pom.xml
Task3/arkpz-pzpi-22-6-morhunov-ihor-task3/src/main/resources/: application.properties
Task4/: arkpz-pzpi-22-6-morhunov-ihor-task4.txt
Task4/arkpz-pzpi-22-6-morhunov-ihor-task4/: CMakeLists.txt  main.cpp
Task4/arkpz-pzpi-22-6-morhunov-ihor-task4/iot/: config.json
Task5/: arkpz-pzpi-22-6-morhunov-ihor-task5.txt
Task5/arkpz-pzpi-22-6-morhunov-ihor-task5/: pom.xml
Task5/arkpz-pzpi-22-6-morhunov-ihor-task5/src/main/resources/: application.properties
src/main/java/org/nure/atark/autoinsure/controller/: CarController.java  PaymentController.java  SensorController.java
src/main/resources/: application.properties
(+142 files in other folders)
